<resources>
    <string name="app_name">Desafio Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="item_trailer">Click to watch the trailer</string>

    <string name="item_avaiable">Avaiable for:</string>

    <string name="loading_data">Loading Data...</string>


    <string name="profile_email">Email: </string>
    <string name="profile_birthday">Birthday: </string>
    <string name="profile_address">Address: </string>
    <string name="profile_city">City: </string>
    <string name="profile_country">Country: </string>

    <string name="menu_games">Games</string>
    <string name="menu_profile">Profile</string>

</resources>
