<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewTopProfile"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="150dp"
        android:src="@drawable/profile_background" />
    <ImageView
        android:id="@+id/imageViewBottomProfile"
        android:layout_below="@+id/imageViewTopProfile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@color/colorPrimaryDark"/>

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/textView_profile_name"
        android:layout_alignLeft="@+id/gif_profile"
        android:layout_alignStart="@+id/gif_profile"
        android:src="@drawable/loading" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loading_data"
        android:layout_marginTop="20dp"
        android:id="@+id/textView_profile_name"
        android:layout_below="@+id/imageViewProfile"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#CCC"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView_profile_name"
        android:layout_centerHorizontal="true"
        android:src ="@drawable/loading"
        />
    <LinearLayout
        android:id="@+id/layoutDataProfile"
        android:layout_below="@+id/imageViewBottomProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"/>
            <TextView
                android:id="@+id/textViewProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_birthday"/>
            <TextView
                android:id="@+id/textViewProfileBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_address"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/textViewProfileAddress"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_city"/>
            <TextView
                android:id="@+id/textViewProfileCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_country"/>
            <TextView
                android:id="@+id/textViewProfileCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>